# micro_wake_word_standalone

./: CMakeLists.txt  idf_component.yml
esphome/core/: helpers.cpp
